# cabal-hooks-sample

./: LICENSE  Setup.hs  codegen.sh  foo.cabal
src/: Lib.hs
