name:                foo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rblaze/foo#readme
license:             BSD3
license-file:        LICENSE
author:              blaze@ruddy.ru
maintainer:          Andrey Sverdlichenko
copyright:           (C) 2015 Andrey Sverdlichenko
category:            Web
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rblaze/foo
